[package]
name = "stairs_01"
version = "0.1.0"
edition = "2021"

[features]
default = [ ]
egui = [ "bevy_egui" ]

[dependencies]
bevy = { version = "0.15.1" }
bevy_asset_loader = "0.22"
bevy_egui = { version = "0.32", optional = true}
bimap = "0.6.3"
rand = { version = "0.9.0", default-features = false, features = ["std", "std_rng"] }
