[package]
name = "stairs_01"
version = "0.2.0"
edition = "2021"

[features]
default = [ ]
egui = [ "bevy_egui" ]

[dependencies]
bevy = { version = "^0.16" }
bevy_asset_loader = "^0.23.0-rc.4"
bevy_egui = { version = "^0.34.1", optional = true}
bimap = "^0.6.3"
rand = { version = "^0.9.1", default-features = false, features = ["std", "std_rng"] }
